<resources>
    <string name="app_name">La Vendimia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">La Vendimia</string>
    <string name="nav_header_subtitle">Concredito Test App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_title_inicio">Inicio</string>
    <string name="menu_ventas">Ventas</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_articulos">Articulos</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="action_fecha">Fecha:</string>
    <string name="precionaparasalir">Preciona dos veces para salir.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txttasafin">Tasa Financiamiento:</string>
    <string name="txtenganche">% Enganche:</string>
    <string name="txtplazo">Plazo Maximo:</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="mgConfiguracion">Bien Hecho. La configuración ha sido registrada.</string>
    <string name="txtEjemplo">Examen Concredito.</string>
    <string name="mgCancelar">¿Deseas salir?</string>
    <string name="btnSi">SI</string>
    <string name="btnNo">No</string>
    <string name="btnnuevoc">Nuevo Cliente</string>
    <string name="clientesreg">Clientes Registrados</string>
    <string name="txtcvecliente">Clave Cliente</string>
    <string name="txtnombre">Nombre</string>
    <string name="nosepudoconectar">No se pudo conectar, verifica tu conexion a internet.</string>
    <string name="clave">Clave:</string>
    <string name="txtnombrecliente">Nombre:</string>
    <string name="txtapcliente">Apellido Paterno:</string>
    <string name="txtrfccliente">RFC:</string>
    <string name="txtamcliente">Apellido Materno:</string>
    <string name="mgCliente">Bien Hecho. El cliente ha sido registrado correctamente.</string>
    <string name="faltanombre">No es posible continuar, debe ingresar nombre es obligario.</string>
    <string name="faltaapaterno">No es posible continuar, debe ingresar Apellido Paterno es obligario.</string>
    <string name="faltaamaterno">No es posible continuar, debe ingresar Apellido Materno es obligario.</string>
    <string name="faltarfc">No es posible continuar, debe ingresar rfc es obligario.</string>
    <string name="mgClienteupdate">Bien Hecho. El cliente ha sido actualizado correctamente.</string>
    <string name="btnnart">Nuevo Articulo</string>
    <string name="artregis">Articulos Registrados</string>
    <string name="txtcveart">Clave Articulo</string>
    <string name="txtdes">Descripción</string>
    <string name="txtDescripcion">Descripción:</string>
    <string name="txtmodelo">Modelo:</string>
    <string name="txtprecio">Precio:</string>
    <string name="txtexistencia">Existencia:</string>
    <string name="faltadescripcion">No es posible continuar, debe ingresar una descripcion es obligatorio.</string>
    <string name="faltaprecio">No es posible continuar, debe ingresar el precio es obligatorio.</string>
    <string name="faltaexistencia">No es posible continuar, debe ingresar la existencia es obligatorio.</string>
    <string name="mgArticulo">Bien Hecho. El articulo ha sido registrado correctamente.</string>
    <string name="mgArticuloupdate">Bien Hecho. El articulo ha sido actualizado correctamente.</string>
    <string name="btnnuevav">Nueva Venta</string>
    <string name="ventasactivas">Ventas Activas</string>
    <string name="txtfolioventa">Folio Venta</string>
    <string name="txtclvcliente">Clave Cliente</string>
    <string name="txtotal">Total</string>
    <string name="txtfecha">Fecha</string>
    <string name="folioventa">Folio Venta:</string>
    <string name="etbuscarcliente">Buscar cliente...</string>
    <string name="txtCliente">Cliente</string>
    <string name="txtArticulo">Articulo</string>
    <string name="txtdesArt">Descripción Articulo</string>
    <string name="txtcantidad">Cantidad</string>
    <string name="txtimporte">Importe</string>
    <string name="txtmodelonv">Modelo</string>
    <string name="txtprecionv">Precio</string>
    <string name="txtenganchedara">Enganche:</string>
    <string name="txtboniEnganche">Bonificación Enganche:</string>
    <string name="txttotaldara">Total:</string>
    <string name="btnsiguiente">Siguiente</string>
    <string name="txtAbonoMen">ABONOS MENSUALES</string>
    <string name="txt3ab">3 ABONOS DE</string>
    <string name="txttotalapa">TOTAL A PAGAR</string>
    <string name="txt3seah">SE AHORRA</string>
    <string name="txt6ab">6 ABONOS DE</string>
    <string name="txt9ab">9 ABONOS DE</string>
    <string name="txt12ab">12 ABONOS DE</string>
    <string name="notieneexistencia">El artículo seleccionado no cuenta con existencia, favor de verificar.</string>
    <string name="losdatosingresadosnosoncorrectos">Los datos ingresados no son correctos, favor de verificar.</string>
    <string name="debeselecunplazo">Debe seleccionar un plazo apra realizar el pago de su compra.</string>
    <string name="elartnotieneexistencia">El artículo seleccionado no cuenta con existencia, favor de verificar.</string>
    <string name="ventaregistrada">Bien Hecho. Tu venta ha sido registrada correctamente.</string>
    <string name="registroVentas">Registro de Ventas</string>
    <string name="elarticuloyaestaagregado">Articulo ya agregado, favor de verificar.</string>
    <string name="registroClientes">Registro de Clientes</string>
    <string name="registroArticulos">Registro de Articulos</string>
</resources>
