<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_title_inicio">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_ventas"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_ventas" />
                <item
                    android:id="@+id/nav_clientes"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_clientes" />
                <item
                    android:id="@+id/nav_articulos"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_articulos" />
                <item
                    android:id="@+id/nav_configuracion"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_configuracion" />
            </group>
        </menu>
    </item>

</menu>
